z-index fix

--- a/src/scss/components/_close.scss
+++ b/src/scss/components/_close.scss
@@ -23,7 +23,7 @@ $windowsCloseHeight:35pt;
     right: 0;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
-    z-index: 10000000;
+    z-index: 999998;
 
     a {
         display: block;
