--- a/src/scss/components/_gdpr-notification-modal.scss
+++ b/src/scss/components/_gdpr-notification-modal.scss
@@ -7,7 +7,7 @@
 	bottom: 0;
 	right: 0;
 	background: $white;
-	z-index: 3000;
+	z-index: 999999;
 
 	&.hide {
 		opacity: 0;
